SERVER-26761 check and return early if shard already exists in addShard