src/mongo/s/catalog/sharding_catalog_manager_impl.cpp
@@ -757,6 +757,22 @@ StatusWith<string> ShardingCatalogManagerImpl::addShard(
     // Only one addShard operation can be in progress at a time.
     Lock::ExclusiveLock lk(txn->lockState(), _kShardMembershipLock);
 
+    // Check if this shard has already been added (can happen in the case of a retry after a network
+    // error, for example) and thus this addShard request should be considered a no-op.
+    auto existingShard =
+        _checkIfShardExists(txn, shardConnectionString, shardProposedName, maxSize);
+    if (!existingShard.isOK()) {
+        return existingShard.getStatus();
+    }
+    if (existingShard.getValue()) {
+        // These hosts already belong to an existing shard, so report success and terminate the
+        // addShard request.  Make sure to set the last optime for the client to the system last
+        // optime so that we'll still wait for replication so that this state is visible in the
+        // committed snapshot.
+        repl::ReplClientInfo::forClient(txn->getClient()).setLastOpToSystemLastOpTime(txn);
+        return existingShard.getValue()->getName();
+    }
+
     // TODO: Don't create a detached Shard object, create a detached RemoteCommandTargeter instead.
     const std::shared_ptr<Shard> shard{
         Grid::get(txn)->shardRegistry()->createConnection(shardConnectionString)};
@@ -780,24 +796,6 @@ StatusWith<string> ShardingCatalogManagerImpl::addShard(
         return shardStatus.getStatus();
     }
     ShardType& shardType = shardStatus.getValue();
-
-
-    // Check if this shard has already been added (can happen in the case of a retry after a network
-    // error, for example) and thus this addShard request should be considered a no-op.
-    auto existingShard =
-        _checkIfShardExists(txn, shardConnectionString, shardProposedName, maxSize);
-    if (!existingShard.isOK()) {
-        return existingShard.getStatus();
-    }
-    if (existingShard.getValue()) {
-        // These hosts already belong to an existing shard, so report success and terminate the
-        // addShard request.  Make sure to set the last optime for the client to the system last
-        // optime so that we'll still wait for replication so that this state is visible in the
-        // committed snapshot.
-        repl::ReplClientInfo::forClient(txn->getClient()).setLastOpToSystemLastOpTime(txn);
-        return existingShard.getValue()->getName();
-    }
-
 
     // Check that none of the existing shard candidate's dbs exist already
     auto dbNamesStatus = _getDBNamesListFromShard(txn, targeter);
